<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    tools:context=".OneToOne">
    <LinearLayout
        android:id="@+id/layout_partnerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/inputshape"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_partnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textStyle="bold|italic"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="translationS"
            android:text="@string/TranslationSettings"
            android:textColor="#000"
            android:textSize="22sp"
            tools:ignore="OnClick" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_translateSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Translate"
            android:textColor="#000"
            android:textSize="18sp" />
        <CheckBox
            android:id="@+id/cb_enableT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EnableTranslator" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/From"
                android:textColor="#000"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/spnr_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:entries="@array/languages"
                android:layout_marginLeft="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/To"
                android:textColor="#000"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/spnr_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:entries="@array/languages"
                android:layout_marginLeft="5dp" />
        </GridLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="back"
            android:text="@string/Back"
            android:textAllCaps="false"
            tools:ignore="OnClick" />
    </LinearLayout>
    <ListView
        android:id="@+id/Lst_Chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:visibility="visible" />
    <LinearLayout
        android:id="@+id/chatZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/inputshape"
        android:orientation="horizontal"
        android:paddingStart="3dp"
        android:paddingLeft="3dp">
        <EditText
            android:id="@+id/txt_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/MsgHere"
            android:inputType="textMultiLine"
            android:textColor="#000"
            android:textColorHint="#000" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:drawable/ic_menu_send"
            android:onClick="msgSend"
            tools:ignore="OnClick" />
    </LinearLayout>
</LinearLayout>