<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <GridLayout
                android:id="@+id/grid_layout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:columnCount="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UserName"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/txt_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:autofillHints="no"
                    android:enabled="false"
                    android:hint="@string/UserName"
                    android:inputType="text"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UserAge"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/txt_userAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:enabled="false"
                    android:hint="@string/UserAge"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UserGender"
                    android:textColor="#000"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/spnr_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:entries="@array/GenderList"
                    android:layout_marginLeft="5dp" />
            </GridLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="save"
                    android:text="@string/Save"
                    android:textAllCaps="false"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="edit"
                    android:text="@string/Edit"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>